# chess_firmware

./: .gitignore  chess_firmware.code-workspace
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: main.rs
data/: .~lock.Raspi_pinout.odt#  Raspi_pinout.odt  motorspeeds.txt
mainp/: Cargo.toml
mainp/src/: lib.rs  main.rs
mctrl/: Cargo.toml
mctrl/src/: lib.rs
pathfinding/: Cargo.toml
position/: Cargo.toml
position/src/: lib.rs
stockfish/: Cargo.toml  testexec.sh
stockfish/src/: lib.rs
testing/: Cargo.toml
testing/src/: main.rs
